Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -247,7 +247,7 @@
        "data": [
         {
          "type": "bar",
-         "uid": "ba558c9a-c486-11ea-af44-2195ebc3e43f",
+         "uid": "099b834a-c487-11ea-af44-2195ebc3e43f",
          "x": [
           "jack",
           "jill",
@@ -265,30 +265,30 @@
         },
         {
          "type": "bar",
-         "uid": "ba5d0ace-c486-11ea-af44-2195ebc3e43f",
+         "uid": "099b85fc-c487-11ea-af44-2195ebc3e43f",
          "x": [
           "jack",
           "jill",
           "sandy",
-          "gob"
+          "blaise"
          ],
          "y": [
-          4,
-          12,
-          3,
-          14,
           8,
-          1
+          11,
+          8,
+          13,
+          6,
+          4
          ]
         }
        ],
        "layout": {}
       },
       "text/html": [
-       "<div id=\"e3819e47-01f4-4315-acab-7dd517b77175\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"e3819e47-01f4-4315-acab-7dd517b77175\", [{\"x\": [\"jack\", \"jill\", \"sandy\", \"blaise\"], \"y\": [8, 11, 8, 13, 6, 4], \"type\": \"bar\", \"uid\": \"ba617424-c486-11ea-af44-2195ebc3e43f\"}, {\"x\": [\"jack\", \"jill\", \"sandy\", \"gob\"], \"y\": [4, 12, 3, 14, 8, 1], \"type\": \"bar\", \"uid\": \"ba617758-c486-11ea-af44-2195ebc3e43f\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"51b3b778-7dda-4978-bddd-72dc819ad49b\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"51b3b778-7dda-4978-bddd-72dc819ad49b\", [{\"x\": [\"jack\", \"jill\", \"sandy\", \"blaise\"], \"y\": [8, 11, 8, 13, 6, 4], \"type\": \"bar\", \"uid\": \"09a545c4-c487-11ea-af44-2195ebc3e43f\"}, {\"x\": [\"jack\", \"jill\", \"sandy\", \"blaise\"], \"y\": [8, 11, 8, 13, 6, 4], \"type\": \"bar\", \"uid\": \"09a5489e-c487-11ea-af44-2195ebc3e43f\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ],
       "text/vnd.plotly.v1+html": [
-       "<div id=\"e3819e47-01f4-4315-acab-7dd517b77175\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"e3819e47-01f4-4315-acab-7dd517b77175\", [{\"x\": [\"jack\", \"jill\", \"sandy\", \"blaise\"], \"y\": [8, 11, 8, 13, 6, 4], \"type\": \"bar\", \"uid\": \"ba617424-c486-11ea-af44-2195ebc3e43f\"}, {\"x\": [\"jack\", \"jill\", \"sandy\", \"gob\"], \"y\": [4, 12, 3, 14, 8, 1], \"type\": \"bar\", \"uid\": \"ba617758-c486-11ea-af44-2195ebc3e43f\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"51b3b778-7dda-4978-bddd-72dc819ad49b\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"51b3b778-7dda-4978-bddd-72dc819ad49b\", [{\"x\": [\"jack\", \"jill\", \"sandy\", \"blaise\"], \"y\": [8, 11, 8, 13, 6, 4], \"type\": \"bar\", \"uid\": \"09a545c4-c487-11ea-af44-2195ebc3e43f\"}, {\"x\": [\"jack\", \"jill\", \"sandy\", \"blaise\"], \"y\": [8, 11, 8, 13, 6, 4], \"type\": \"bar\", \"uid\": \"09a5489e-c487-11ea-af44-2195ebc3e43f\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ]
      },
      "metadata": {},
@@ -300,7 +300,7 @@
     "trace1 = {'type': 'bar', 'x': ['jack', 'jill', 'sandy', 'gob'], 'y': [4, 12, 3, 14, 8, 1]}\n",
     "\n",
     "\n",
-    "plotly.offline.iplot([trace0, trace1])"
+    "plotly.offline.iplot([trace0, Jeff])"
    ]
   },
   {
