--- a/index.ipynb
+++ b/index.ipynb
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -247,7 +247,7 @@
        "data": [
         {
          "type": "bar",
-         "uid": "099b834a-c487-11ea-af44-2195ebc3e43f",
+         "uid": "12755ac2-c487-11ea-af44-2195ebc3e43f",
          "x": [
           "jack",
           "jill",
@@ -265,30 +265,30 @@
         },
         {
          "type": "bar",
-         "uid": "099b85fc-c487-11ea-af44-2195ebc3e43f",
+         "uid": "12755d4c-c487-11ea-af44-2195ebc3e43f",
          "x": [
           "jack",
           "jill",
           "sandy",
-          "blaise"
+          "gob"
          ],
          "y": [
+          4,
+          12,
+          3,
+          14,
           8,
-          11,
-          8,
-          13,
-          6,
-          4
+          1
          ]
         }
        ],
        "layout": {}
       },
       "text/html": [
-       "<div id=\"51b3b778-7dda-4978-bddd-72dc819ad49b\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"51b3b778-7dda-4978-bddd-72dc819ad49b\", [{\"x\": [\"jack\", \"jill\", \"sandy\", \"blaise\"], \"y\": [8, 11, 8, 13, 6, 4], \"type\": \"bar\", \"uid\": \"09a545c4-c487-11ea-af44-2195ebc3e43f\"}, {\"x\": [\"jack\", \"jill\", \"sandy\", \"blaise\"], \"y\": [8, 11, 8, 13, 6, 4], \"type\": \"bar\", \"uid\": \"09a5489e-c487-11ea-af44-2195ebc3e43f\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"f338ff29-6f1f-4999-8bb3-3e20f9a71f8f\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"f338ff29-6f1f-4999-8bb3-3e20f9a71f8f\", [{\"x\": [\"jack\", \"jill\", \"sandy\", \"blaise\"], \"y\": [8, 11, 8, 13, 6, 4], \"type\": \"bar\", \"uid\": \"12795686-c487-11ea-af44-2195ebc3e43f\"}, {\"x\": [\"jack\", \"jill\", \"sandy\", \"gob\"], \"y\": [4, 12, 3, 14, 8, 1], \"type\": \"bar\", \"uid\": \"127958c0-c487-11ea-af44-2195ebc3e43f\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ],
       "text/vnd.plotly.v1+html": [
-       "<div id=\"51b3b778-7dda-4978-bddd-72dc819ad49b\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"51b3b778-7dda-4978-bddd-72dc819ad49b\", [{\"x\": [\"jack\", \"jill\", \"sandy\", \"blaise\"], \"y\": [8, 11, 8, 13, 6, 4], \"type\": \"bar\", \"uid\": \"09a545c4-c487-11ea-af44-2195ebc3e43f\"}, {\"x\": [\"jack\", \"jill\", \"sandy\", \"blaise\"], \"y\": [8, 11, 8, 13, 6, 4], \"type\": \"bar\", \"uid\": \"09a5489e-c487-11ea-af44-2195ebc3e43f\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"f338ff29-6f1f-4999-8bb3-3e20f9a71f8f\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"f338ff29-6f1f-4999-8bb3-3e20f9a71f8f\", [{\"x\": [\"jack\", \"jill\", \"sandy\", \"blaise\"], \"y\": [8, 11, 8, 13, 6, 4], \"type\": \"bar\", \"uid\": \"12795686-c487-11ea-af44-2195ebc3e43f\"}, {\"x\": [\"jack\", \"jill\", \"sandy\", \"gob\"], \"y\": [4, 12, 3, 14, 8, 1], \"type\": \"bar\", \"uid\": \"127958c0-c487-11ea-af44-2195ebc3e43f\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ]
      },
      "metadata": {},
@@ -300,7 +300,7 @@
     "trace1 = {'type': 'bar', 'x': ['jack', 'jill', 'sandy', 'gob'], 'y': [4, 12, 3, 14, 8, 1]}\n",
     "\n",
     "\n",
-    "plotly.offline.iplot([trace0, Jeff])"
+    "plotly.offline.iplot([Jeff, trace1])"
    ]
   },
   {
