--- a/index.ipynb
+++ b/index.ipynb
@@ -300,7 +300,10 @@
     "trace1 = {'type': 'bar', 'x': ['jack', 'jill', 'sandy', 'gob'], 'y': [4, 12, 3, 14, 8, 1]}\n",
     "\n",
     "\n",
-    "plotly.offline.iplot([Jeff, trace1])"
+    "plotly.offline.iplot([Jeff, trace1])\n",
+    "\n",
+    "\\\\\n",
+    "print(Jeff)"
    ]
   },
   {
