--- a/index.ipynb
+++ b/index.ipynb
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -247,7 +247,7 @@
        "data": [
         {
          "type": "bar",
-         "uid": "12755ac2-c487-11ea-af44-2195ebc3e43f",
+         "uid": "1aeddc24-c487-11ea-af44-2195ebc3e43f",
          "x": [
           "jack",
           "jill",
@@ -265,7 +265,7 @@
         },
         {
          "type": "bar",
-         "uid": "12755d4c-c487-11ea-af44-2195ebc3e43f",
+         "uid": "1aedde72-c487-11ea-af44-2195ebc3e43f",
          "x": [
           "jack",
           "jill",
@@ -285,14 +285,21 @@
        "layout": {}
       },
       "text/html": [
-       "<div id=\"f338ff29-6f1f-4999-8bb3-3e20f9a71f8f\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"f338ff29-6f1f-4999-8bb3-3e20f9a71f8f\", [{\"x\": [\"jack\", \"jill\", \"sandy\", \"blaise\"], \"y\": [8, 11, 8, 13, 6, 4], \"type\": \"bar\", \"uid\": \"12795686-c487-11ea-af44-2195ebc3e43f\"}, {\"x\": [\"jack\", \"jill\", \"sandy\", \"gob\"], \"y\": [4, 12, 3, 14, 8, 1], \"type\": \"bar\", \"uid\": \"127958c0-c487-11ea-af44-2195ebc3e43f\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"cbf48450-d91c-4ded-bef1-ced0c350b04c\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"cbf48450-d91c-4ded-bef1-ced0c350b04c\", [{\"x\": [\"jack\", \"jill\", \"sandy\", \"blaise\"], \"y\": [8, 11, 8, 13, 6, 4], \"type\": \"bar\", \"uid\": \"1af1b6e6-c487-11ea-af44-2195ebc3e43f\"}, {\"x\": [\"jack\", \"jill\", \"sandy\", \"gob\"], \"y\": [4, 12, 3, 14, 8, 1], \"type\": \"bar\", \"uid\": \"1af1ba1a-c487-11ea-af44-2195ebc3e43f\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ],
       "text/vnd.plotly.v1+html": [
-       "<div id=\"f338ff29-6f1f-4999-8bb3-3e20f9a71f8f\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"f338ff29-6f1f-4999-8bb3-3e20f9a71f8f\", [{\"x\": [\"jack\", \"jill\", \"sandy\", \"blaise\"], \"y\": [8, 11, 8, 13, 6, 4], \"type\": \"bar\", \"uid\": \"12795686-c487-11ea-af44-2195ebc3e43f\"}, {\"x\": [\"jack\", \"jill\", \"sandy\", \"gob\"], \"y\": [4, 12, 3, 14, 8, 1], \"type\": \"bar\", \"uid\": \"127958c0-c487-11ea-af44-2195ebc3e43f\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"cbf48450-d91c-4ded-bef1-ced0c350b04c\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"cbf48450-d91c-4ded-bef1-ced0c350b04c\", [{\"x\": [\"jack\", \"jill\", \"sandy\", \"blaise\"], \"y\": [8, 11, 8, 13, 6, 4], \"type\": \"bar\", \"uid\": \"1af1b6e6-c487-11ea-af44-2195ebc3e43f\"}, {\"x\": [\"jack\", \"jill\", \"sandy\", \"gob\"], \"y\": [4, 12, 3, 14, 8, 1], \"type\": \"bar\", \"uid\": \"1af1ba1a-c487-11ea-af44-2195ebc3e43f\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'type': 'bar', 'x': ['jack', 'jill', 'sandy', 'blaise'], 'y': [8, 11, 8, 13, 6, 4]}\n"
+     ]
     }
    ],
    "source": [
@@ -302,7 +309,7 @@
     "\n",
     "plotly.offline.iplot([Jeff, trace1])\n",
     "\n",
-    "\\\\\n",
+    "\n",
     "print(Jeff)"
    ]
   },
