Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -247,7 +247,7 @@
        "data": [
         {
          "type": "bar",
-         "uid": "1aeddc24-c487-11ea-af44-2195ebc3e43f",
+         "uid": "2eabc49c-c487-11ea-af44-2195ebc3e43f",
          "x": [
           "jack",
           "jill",
@@ -265,7 +265,7 @@
         },
         {
          "type": "bar",
-         "uid": "1aedde72-c487-11ea-af44-2195ebc3e43f",
+         "uid": "2eabc708-c487-11ea-af44-2195ebc3e43f",
          "x": [
           "jack",
           "jill",
@@ -285,21 +285,14 @@
        "layout": {}
       },
       "text/html": [
-       "<div id=\"cbf48450-d91c-4ded-bef1-ced0c350b04c\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"cbf48450-d91c-4ded-bef1-ced0c350b04c\", [{\"x\": [\"jack\", \"jill\", \"sandy\", \"blaise\"], \"y\": [8, 11, 8, 13, 6, 4], \"type\": \"bar\", \"uid\": \"1af1b6e6-c487-11ea-af44-2195ebc3e43f\"}, {\"x\": [\"jack\", \"jill\", \"sandy\", \"gob\"], \"y\": [4, 12, 3, 14, 8, 1], \"type\": \"bar\", \"uid\": \"1af1ba1a-c487-11ea-af44-2195ebc3e43f\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"1fabde5e-fb29-49f6-9254-aee0e7d71fb5\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"1fabde5e-fb29-49f6-9254-aee0e7d71fb5\", [{\"x\": [\"jack\", \"jill\", \"sandy\", \"blaise\"], \"y\": [8, 11, 8, 13, 6, 4], \"type\": \"bar\", \"uid\": \"2eb72102-c487-11ea-af44-2195ebc3e43f\"}, {\"x\": [\"jack\", \"jill\", \"sandy\", \"gob\"], \"y\": [4, 12, 3, 14, 8, 1], \"type\": \"bar\", \"uid\": \"2eb72364-c487-11ea-af44-2195ebc3e43f\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ],
       "text/vnd.plotly.v1+html": [
-       "<div id=\"cbf48450-d91c-4ded-bef1-ced0c350b04c\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"cbf48450-d91c-4ded-bef1-ced0c350b04c\", [{\"x\": [\"jack\", \"jill\", \"sandy\", \"blaise\"], \"y\": [8, 11, 8, 13, 6, 4], \"type\": \"bar\", \"uid\": \"1af1b6e6-c487-11ea-af44-2195ebc3e43f\"}, {\"x\": [\"jack\", \"jill\", \"sandy\", \"gob\"], \"y\": [4, 12, 3, 14, 8, 1], \"type\": \"bar\", \"uid\": \"1af1ba1a-c487-11ea-af44-2195ebc3e43f\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"1fabde5e-fb29-49f6-9254-aee0e7d71fb5\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"1fabde5e-fb29-49f6-9254-aee0e7d71fb5\", [{\"x\": [\"jack\", \"jill\", \"sandy\", \"blaise\"], \"y\": [8, 11, 8, 13, 6, 4], \"type\": \"bar\", \"uid\": \"2eb72102-c487-11ea-af44-2195ebc3e43f\"}, {\"x\": [\"jack\", \"jill\", \"sandy\", \"gob\"], \"y\": [4, 12, 3, 14, 8, 1], \"type\": \"bar\", \"uid\": \"2eb72364-c487-11ea-af44-2195ebc3e43f\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'type': 'bar', 'x': ['jack', 'jill', 'sandy', 'blaise'], 'y': [8, 11, 8, 13, 6, 4]}\n"
-     ]
     }
    ],
    "source": [
@@ -307,7 +300,7 @@
     "trace1 = {'type': 'bar', 'x': ['jack', 'jill', 'sandy', 'gob'], 'y': [4, 12, 3, 14, 8, 1]}\n",
     "\n",
     "\n",
-    "plotly.offline.iplot([Jeff, trace1])"
+    "plotly.offline.iplot([trace0, trace1])"
    ]
   },
   {
